<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Choose</string>
    <string name="clear_image">Clear</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis Menyatakan :</string>
    <string name="confidence">Dengan Confidence Score :</string>
    <string name="save_to_room">*) Anda dapat melihat hasil cancer detection kembali pada halaman history (disimpan otomatis)</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="cancer_detection">Cancer Detection Here</string>

    <string name="title_tips_hindari_cancer">Tips Mencegah Kanker</string>

    <string name="tips_hindari_cancer">Berikut ini adalah beberapa strategi gaya hidup yang bisa dilakukan oleh masyarakat untuk mencegah kanker, diantaranya adalah:\n\n1.	Menjaga berat badan agar tetap sehat dan ideal\n2.	Aktif melakukan aktivitas fisik minimal 30 menit sehari, agar tubuh tetap bugar.\n3.	Lakukan pemeriksaan berkala ke fasilitas kesehatan terdekat.\n4.	Kurangi konsumsi sodium/garam\n5.	Kurangi konsumsi makanan/minuman manis\n6.	Hindari makanan yang diasap atau dibakar.\n\nKanker menjadi salah satu masalah kesehatan yang mengancam nyawa penderitanya. Namun demikian, dengan mengetahui beberapa tips mencegah kanker di atas, dapat menurunkan potensi risiko masyarakat dari penyakit kanker.
Tetap terapkan perilaku hidup bersih dan sehat, serta segera lakukan pemeriksaan ke fasilitas kesehatan terdekat ketika mengalami gejala penyakit kanker untuk mendapatkan penanganan segera dari petugas kesehatan.
</string>

    <string name="dummyLongText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis fringilla ipsum. Nam pharetra dapibus justo et pretium. Integer a semper augue, quis ultrices ante. Vestibulum sed massa nec ex vulputate consectetur sed at quam. Cras vestibulum dui non cursus semper. Quisque eleifend sit amet nisl vulputate imperdiet. Suspendisse in molestie ipsum, ac consectetur orci. Sed ante dolor, finibus dapibus pharetra sed, consectetur quis lacus.</string>


</resources>