<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultDetection.ResultActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Result Cancer Detection"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_place_holder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    style="@style/TEXT"/>

                <LinearLayout
                    android:id="@+id/divLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/rectangle_stroke_green"
                    android:paddingVertical="3dp"
                    android:paddingHorizontal="5dp"
                    android:layout_marginVertical="10dp">
                    <TextView
                        android:id="@+id/result_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="Non Cancer" />
                </LinearLayout>

                <TextView
                    android:id="@+id/confidence_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/confidence"
                    style="@style/TEXT"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/title_tips_hindari_cancer"
                    android:justificationMode="inter_word"
                    style="@style/TEXT"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/tips_hindari_cancer"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="5dp"
                    style="@style/TEXT"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>